# audioreach-graphservices

./: Android.mk  CONTRIBUTING.md  Makefile.am  README.md  configure.ac
acdb/: Android.mk  Makefile.am  acdb.pc.in
acdb/api/: acdb.h  acdb_end_pack.h
acdb/ats/: Makefile.am  ats.pc.in
acdb/ats/adie/common/api/: adie_rtc_api.h
acdb/ats/adie/common/inc/: ats_adie_rtc.h
acdb/ats/adie/common/src/: ats_adie_rtc.c
acdb/ats/adie/linux/: adie_rtc.c
acdb/ats/api/: ats.h
acdb/ats/dls/common/inc/: ats_dls.h
acdb/ats/dls/common/src/: ats_dls.c
acdb/ats/fts/common/inc/: ats_fts.h
acdb/ats/fts/common/src/: ats_fts.c
acdb/ats/inc/: ats_command.h  ats_common.h  ats_i.h
acdb/ats/mcs/common/api/: mcs_api.h
acdb/ats/mcs/common/inc/: ats_mcs.h
acdb/ats/mcs/linux/: mcs.c
acdb/ats/src/: ats.c  ats_command.c
acdb/inc/: acdb_command.h  acdb_common.h  acdb_context_mgr.h  acdb_data_proc.h  acdb_delta_file_mgr.h  acdb_delta_parser.h  acdb_file_mgr.h  acdb_heap.h  acdb_init.h  acdb_init_utility.h  acdb_parser.h  acdb_types.h  acdb_utility.h
acdb/src/: acdb.c  acdb_command.c  acdb_context_mgr.c  acdb_data_proc.c  acdb_delta_file_mgr.c  acdb_delta_parser.c  acdb_file_mgr.c  acdb_heap.c  acdb_init.c  acdb_init_utility.c  acdb_parser.c  acdb_utility.c
ar_osal/: Android.mk  Makefile.am  ar_osal.pc.in
ar_osal/api/: ar_osal_error.h  ar_osal_file_io.h  ar_osal_heap.h  ar_osal_log.h  ar_osal_log_pkt_op.h  ar_osal_mem_op.h  ar_osal_mutex.h  ar_osal_servreg.h  ar_osal_shmem.h  ar_osal_signal.h  ar_osal_signal2.h  ar_osal_sleep.h  ar_osal_string.h  ar_osal_sys_id.h  ar_osal_thread.h  ar_osal_timer.h  ar_osal_types.h
ar_osal/src/linux/: ar_osal_file_io.c  ar_osal_heap.c  ar_osal_log.c  ar_osal_mem_op.c  ar_osal_mutex.c  ar_osal_shmem.c  ar_osal_signal.c  ar_osal_signal2.c  ar_osal_sleep.c  ar_osal_string.c  ar_osal_stub_log_pkt_op.c  ar_osal_thread.c  ar_osal_timer.c
ar_osal/src/linux/qcom/: ar_osal_log_pkt_op.c  ar_osal_servreg.c  ar_osal_shmem.c  ar_osal_shmem_db.c  ar_osal_shmem_ion.c
ar_util/: Android.mk  Makefile.am  ar_util.pc.in
ar_util/api/: ar_util_data_log.h  ar_util_data_log_codes.h  ar_util_err_detection.h  ar_util_list.h
ar_util/inc/: ar_util_log_pkt_i.h
ar_util/src/: ar_util_data_log.c  ar_util_err_detection.c  ar_util_list.c
ar_util/test/inc/: ar_osal_test.h
ar_util/test/src/: ar_osal_mutex_thread.c  ar_osal_signal_thread.c  ar_osal_test.c  ar_osal_test_service.c  ar_test_data_log.c  ar_test_file_io.c  ar_test_heap.c  ar_test_list.c  ar_test_log_pkt_op.c  ar_test_mem_op.c  ar_test_shmem.c  ar_test_sleep.c  ar_test_string.c
ci/: apply_patch.sh  (+5 more)
gpr/: Android.mk  LICENSE  Makefile.am  gpr.pc.in
gpr/api/: ar_guids.h  ar_types.h  gpr_api.h  gpr_api_inline.h  gpr_comdef.h  gpr_ids_domains.h  gpr_msg_if.h  gpr_pack_begin.h  gpr_pack_end.h  gpr_packet.h  gpr_proc_info_api.h  ipc_dl_api.h
gpr/api/private/: gpr_private_api.h
gpr/core/inc/: gpr_api_i.h  gpr_heap_i.h  gpr_list.h  gpr_session.h
gpr/core/src/: gpr_drv.c  gpr_drv_i.h  gpr_drv_island.c  gpr_list.c  gpr_list_i.h  gpr_list_island.c  gpr_main.c  gpr_memq.c  gpr_memq.h  gpr_memq_island.c
gpr/core/src/array_based/: gpr_session.c  gpr_session_island.c
gpr/core/src/hash_based/: gpr_session.c  gpr_session_island.c
gpr/datalinks/gpr_lx/inc/: gpr_lx.h  list.h
gpr/datalinks/gpr_lx/src/: gpr_lx.c
gpr/ext/dynamic_allocation/inc/: gpr_dynamic_allocation.h
gpr/ext/dynamic_allocation/src/: gpr_dynamic_allocation.c
gpr/ext/dynamic_allocation/stub_src/: gpr_dynamic_allocation.c
gpr/ext/logging/inc/: gpr_log.h
gpr/ext/logging/src/: gpr_log_adsp.c  gpr_log_diag.c  gpr_log_generic.c  gpr_log_i.h
gpr/ext/logging/stub_src/: gpr_log_diag_stub.c  gpr_log_stub.c
gpr/platform/linux/: gpr_init_lx_wrapper.c
gsl/: Android.mk  Makefile.am  gsl.pc.in
gsl/api/: gsl_intf.h  gsl_subgraph_driver_props.h  gsl_subgraph_driver_props.xml  gsl_subgraph_platform_driver_props.xml
gsl/dls_client_api/: gsl_dls_client_intf.h
gsl/hw_rsc_api/: gsl_hw_rsc_intf.h
gsl/inc/: gsl_common.h  gsl_datapath.h  gsl_dls_client.h  gsl_dynamic_module_mgr.h  gsl_global_persist_cal.h  gsl_graph.h  gsl_main.h  gsl_mdf_utils.h  gsl_mdf_utils.xml  gsl_msg_builder.h  gsl_rtc.h  gsl_rtc_main.h  gsl_shmem_mgr.h  gsl_spf_ss_state.h  gsl_subgraph.h  gsl_subgraph_driver_props_generic.h  gsl_subgraph_pool.h
gsl/rtc_api/: gsl_rtc_intf.h
gsl/src/: gsl_common.c  gsl_datapath.c  gsl_dls_client.c  gsl_dynamic_module_mgr.c  gsl_global_persist_cal.c  gsl_graph.c  gsl_hw_rsc_mgr.c  gsl_main.c  gsl_mdf_utils.c  gsl_msg_builder.c  gsl_rtc.c  gsl_rtc_main.c  gsl_shmem_mgr.c  gsl_spf_ss_state.c  gsl_subgraph.c  gsl_subgraph_pool.c
spf/: Android.mk  Makefile.am  spf.pc.in
spf/api/apm/: apm_api.h  apm_api_version.h  apm_container_api.h  apm_graph_properties.h  apm_memmap_api.h  apm_module_api.h  apm_sub_graph_api.h
spf/api/ar_utils/: ar_defs.h  ar_error_codes.h  ar_guids.h  ar_ids.h  spf_begin_pack.h  spf_begin_pragma.h  spf_end_pack.h  spf_end_pragma.h
spf/api/ar_utils/generic/: ar_msg.h
spf/api/asps/: asps_acd_usecase_api.h  asps_acm_api.h  asps_ads_usecase_api.h  asps_upd_usecase_api.h  asps_us_rendering_usecase_api.h
spf/api/modules/: aac_decoder_api.h  aac_encoder_api.h  acd_api.h  alac_decoder_api.h  amdb_api.h  amrwb_decoder_api.h  amrwb_encoder_api.h  amrwbplus_decoder_api.h  ape_decoder_api.h  aptx-adaptive3-ble-encoder-api.h  aptx_adaptive_encoder_api.h  aptx_adaptive_swb_decoder_api.h  aptx_adaptive_swb_encoder_api.h  aptx_classic_decoder_api.h  aptx_classic_encoder_api.h  aptx_hd_decoder_api.h  aptx_hd_encoder_api.h  asr_module_calibration_api.h  audio_dam_buffer_api.h  audio_hw_clk_api.h  audio_hw_dma_api.h  audio_hw_lpm_api.h  celt_enc_api.h  codec_dma_api.h  codec_metadata_api.h  common_enc_dec_api.h  congestion_buf_api.h  contexts_api.h  cop_packetizer_cmn_api.h  cop_packetizer_v0_api.h  cop_v2_depacketizer_api.h  cop_v2_packetizer_api.h  cps_data_router.h  data_logging_api.h  data_marker_api.h  detection_cmn_api.h  display_port_api.h  dls_api.h  dls_log_pkt_hdr_api.h  dtmf_detection_api.h  (+63 more)
spf/api/vcpm/: vcpm_api.h
(+53 files in other folders)
